--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,29 +1,31 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend for CureLine",
   "license": "ISC",
-  "author": "",
+  "author": "Suyash Mukesh Shrivastava",
   "type": "module",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -r dotenv/config --experimental-json-modules server.js"
+    "start": "node server.js",
+    "server": "nodemon server.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
-    "cloudinary": "^2.7.0",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0",
+    "express": "^5.2.1",
     "init": "^0.1.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.17.2",
+    "m": "^1.10.0",
+    "mongoose": "^8.20.2",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
+    "q": "^2.0.3",
     "validator": "^13.15.15"
-  },
-  "devDependencies": {}
+  }
 }
