--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,6 +26,7 @@
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "q": "^2.0.3",
+    "razorpay": "^2.9.6",
     "validator": "^13.15.15"
   }
 }
