--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,4 +1,4 @@
 VITE_BACKEND_URL = http://localhost:4000
 
-VITE_RAZORPAY_KEY_ID = 
-VITE_RAZORPAY_KEY_SECRET = 
+VITE_RAZORPAY_KEY_ID = "rzp_test_RuBft9HUHWBucq"
+VITE_RAZORPAY_KEY_SECRET = "24pwO0LnmoTAZs6Kg8s9qjdk"
